// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoComplete /> Variants properly renders a async auto complete 1`] = `
.emotion-0 {
  margin-bottom: 0.5rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-4 {
  position: relative;
  box-sizing: border-box;
}

.emotion-5 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-7 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-7 {
    font-size: 1rem;
  }
}

.emotion-7::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-7::-moz-placeholder {
  color: #989A9C;
}

.emotion-7:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-7::placeholder {
  color: #989A9C;
}

.emotion-7:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-7:disabled {
  background: #F2F2F2;
}

.emotion-7:required {
  box-shadow: none;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-9 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-10:focus {
  outline: none;
}

.emotion-11 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

.emotion-13 {
  display: block;
}

.emotion-14 {
  font-family: Motiva Sans;
  color: #D93838;
  line-height: 1.5;
  font-size: 0.8125rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <label
        className="emotion-3"
        htmlFor="auto-complete-async"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-4"
    onKeyDown={[Function]}
  >
    <span
      className="emotion-5"
      id="react-select-2-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="emotion-5"
    />
    <div
      className="emotion-7"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
          color="text.placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-2-listbox"
          aria-describedby="react-select-2-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="AutoComplete Input"
          aria-owns="react-select-2-listbox"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-10"
          disabled={false}
          id="react-select-2-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          spellCheck="false"
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-11"
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13"
          display="block"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-14"
    color="palette.red.default"
  >
    Test the auto complete input
  </span>
</div>
`;

exports[`<AutoComplete /> Variants properly renders a asyncCreatable auto complete 1`] = `
.emotion-0 {
  margin-bottom: 0.5rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-4 {
  position: relative;
  box-sizing: border-box;
}

.emotion-5 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-7 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-7 {
    font-size: 1rem;
  }
}

.emotion-7::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-7::-moz-placeholder {
  color: #989A9C;
}

.emotion-7:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-7::placeholder {
  color: #989A9C;
}

.emotion-7:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-7:disabled {
  background: #F2F2F2;
}

.emotion-7:required {
  box-shadow: none;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-9 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-10:focus {
  outline: none;
}

.emotion-11 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

.emotion-13 {
  display: block;
}

.emotion-14 {
  font-family: Motiva Sans;
  color: #D93838;
  line-height: 1.5;
  font-size: 0.8125rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <label
        className="emotion-3"
        htmlFor="auto-complete-asyncCreatable"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-4"
    onKeyDown={[Function]}
  >
    <span
      className="emotion-5"
      id="react-select-3-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="emotion-5"
    />
    <div
      className="emotion-7"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
          color="text.placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-3-listbox"
          aria-describedby="react-select-3-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="AutoComplete Input"
          aria-owns="react-select-3-listbox"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-10"
          disabled={false}
          id="react-select-3-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          spellCheck="false"
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-11"
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13"
          display="block"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-14"
    color="palette.red.default"
  >
    Test the auto complete input
  </span>
</div>
`;

exports[`<AutoComplete /> Variants properly renders a creatable auto complete 1`] = `
.emotion-0 {
  margin-bottom: 0.5rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-4 {
  position: relative;
  box-sizing: border-box;
}

.emotion-5 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-7 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-7 {
    font-size: 1rem;
  }
}

.emotion-7::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-7::-moz-placeholder {
  color: #989A9C;
}

.emotion-7:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-7::placeholder {
  color: #989A9C;
}

.emotion-7:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-7:disabled {
  background: #F2F2F2;
}

.emotion-7:required {
  box-shadow: none;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-9 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-10:focus {
  outline: none;
}

.emotion-11 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

.emotion-13 {
  display: block;
}

.emotion-14 {
  font-family: Motiva Sans;
  color: #D93838;
  line-height: 1.5;
  font-size: 0.8125rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <label
        className="emotion-3"
        htmlFor="auto-complete-creatable"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-4"
    onKeyDown={[Function]}
  >
    <span
      className="emotion-5"
      id="react-select-4-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="emotion-5"
    />
    <div
      className="emotion-7"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
          color="text.placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-4-listbox"
          aria-describedby="react-select-4-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="AutoComplete Input"
          aria-owns="react-select-4-listbox"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-10"
          disabled={false}
          id="react-select-4-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          spellCheck="false"
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-11"
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13"
          display="block"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-14"
    color="palette.red.default"
  >
    Test the auto complete input
  </span>
</div>
`;

exports[`<AutoComplete /> Variants properly renders a default auto complete 1`] = `
.emotion-0 {
  margin-bottom: 0.5rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-4 {
  position: relative;
  box-sizing: border-box;
}

.emotion-5 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-7 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-7 {
    font-size: 1rem;
  }
}

.emotion-7::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-7::-moz-placeholder {
  color: #989A9C;
}

.emotion-7:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-7::placeholder {
  color: #989A9C;
}

.emotion-7:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-7:disabled {
  background: #F2F2F2;
}

.emotion-7:required {
  box-shadow: none;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-9 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-10:focus {
  outline: none;
}

.emotion-11 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

.emotion-13 {
  display: block;
}

.emotion-14 {
  font-family: Motiva Sans;
  color: #D93838;
  line-height: 1.5;
  font-size: 0.8125rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <label
        className="emotion-3"
        htmlFor="auto-complete-default"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-4"
    onKeyDown={[Function]}
  >
    <span
      className="emotion-5"
      id="react-select-5-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="emotion-5"
    />
    <div
      className="emotion-7"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
          color="text.placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-5-listbox"
          aria-describedby="react-select-5-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="AutoComplete Input"
          aria-owns="react-select-5-listbox"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-10"
          disabled={false}
          id="react-select-5-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          spellCheck="false"
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-11"
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13"
          display="block"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-14"
    color="palette.red.default"
  >
    Test the auto complete input
  </span>
</div>
`;

exports[`<AutoComplete /> hideDropdownIndicator false renders the auto complete with a dropdown indicator 1`] = `
.emotion-0 {
  margin-bottom: 0.5rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-4 {
  position: relative;
  box-sizing: border-box;
}

.emotion-5 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-7 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-7 {
    font-size: 1rem;
  }
}

.emotion-7::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-7::-moz-placeholder {
  color: #989A9C;
}

.emotion-7:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-7::placeholder {
  color: #989A9C;
}

.emotion-7:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-7:disabled {
  background: #F2F2F2;
}

.emotion-7:required {
  box-shadow: none;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-9 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-10:focus {
  outline: none;
}

.emotion-11 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

.emotion-13 {
  display: block;
}

.emotion-14 {
  font-family: Motiva Sans;
  color: #D93838;
  line-height: 1.5;
  font-size: 0.8125rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <label
        className="emotion-3"
        htmlFor="auto-complete"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-4"
    onKeyDown={[Function]}
  >
    <span
      className="emotion-5"
      id="react-select-6-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="emotion-5"
    />
    <div
      className="emotion-7"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
          color="text.placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-6-listbox"
          aria-describedby="react-select-6-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="AutoComplete Input"
          aria-owns="react-select-6-listbox"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-10"
          disabled={false}
          id="react-select-6-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          spellCheck="false"
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-11"
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13"
          display="block"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-14"
    color="palette.red.default"
  >
    Test the auto complete input
  </span>
</div>
`;

exports[`<AutoComplete /> hideDropdownIndicator true renders the auto complete without a dropdown indicator 1`] = `
.emotion-0 {
  margin-bottom: 0.5rem;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-4 {
  position: relative;
  box-sizing: border-box;
}

.emotion-5 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-7 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
}

@media (max-width: 768px) {
  .emotion-7 {
    font-size: 1rem;
  }
}

.emotion-7::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-7::-moz-placeholder {
  color: #989A9C;
}

.emotion-7:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-7::placeholder {
  color: #989A9C;
}

.emotion-7:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-7:disabled {
  background: #F2F2F2;
}

.emotion-7:required {
  box-shadow: none;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  grid-gap: 0.25rem;
}

.emotion-9 {
  font-family: Motiva Sans;
  color: #989A9C;
  box-sizing: border-box;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-10 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Motiva Sans;
  font-size: 0.875rem;
}

.emotion-10:focus {
  outline: none;
}

.emotion-11 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.emotion-12 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  margin-bottom: 0;
  margin-top: 0;
  width: 1px;
  box-sizing: border-box;
}

.emotion-13 {
  display: none;
}

.emotion-14 {
  font-family: Motiva Sans;
  color: #D93838;
  line-height: 1.5;
  font-size: 0.8125rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <label
        className="emotion-3"
        htmlFor="auto-complete"
      >
        AutoComplete Input
      </label>
    </div>
  </div>
  <div
    className=" emotion-4"
    onKeyDown={[Function]}
  >
    <span
      className="emotion-5"
      id="react-select-7-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      className="emotion-5"
    />
    <div
      className="emotion-7"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
          color="text.placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="react-select-7-listbox"
          aria-describedby="react-select-7-placeholder"
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="AutoComplete Input"
          aria-owns="react-select-7-listbox"
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="emotion-10"
          disabled={false}
          id="react-select-7-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          role="combobox"
          spellCheck="false"
          tabIndex={0}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-11"
        display="grid"
      >
        <span
          className=" emotion-12"
        />
        <i
          aria-hidden="true"
          aria-label="show options"
          className="ar ar-chevron emotion-13"
          display="none"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        />
      </div>
    </div>
  </div>
  <span
    className="emotion-14"
    color="palette.red.default"
  >
    Test the auto complete input
  </span>
</div>
`;
